fix(ui): state in dark are using the wrong color
cssVariable function don't manage overriden vars in dark

--- a/ui/src/styles/layout/root-dark.scss
+++ b/ui/src/styles/layout/root-dark.scss
@@ -181,12 +181,12 @@ html.dark {
     #{--background-color-retried}: #578DFF33;
     // PAUSED
     #{--content-color-paused}: #FEF0BE;
-    #{--border-color-paused}: #7E703E33;
-    #{--background-color-paused}: #FDEAA8;
+    #{--border-color-paused}: #FDEAA8;
+    #{--background-color-paused}: #7E703E33;
     // RESTARTED
     #{--content-color-restarted}: #7FD8FF;
-    #{--border-color-restarted}: #5BB8FF33;
-    #{--background-color-restarted}: #C7FDFF;
+    #{--border-color-restarted}: #C7FDFF;
+    #{--background-color-restarted}: #5BB8FF20;
     // KILLING
     #{--content-color-killing}: #FFFFFF;
     #{--border-color-killing}: #918BA9;
